add keywords in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/41c8bc1d51.js" crossorigin="anonymous"></script>
+  <meta name="keywords"
+    content="freelancer, Front-end, website, create website, professional website, Mateusz Magier" />
 
   <title>Mateusz Magier Front-end Web Developer</title>
 </head>
