change keywords in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/41c8bc1d51.js" crossorigin="anonymous"></script>
   <meta name="keywords"
-    content="freelancer, Front-end, website, create website, professional website, Mateusz Magier" />
+    content="freelancer, Front-end, website, create website, professional website, Mateusz Magier, landing page, single page aplication" />
 
   <title>Mateusz Magier Front-end Web Developer</title>
 </head>
